data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4751.wast
;; 10. **Test Description:**     - Develop a scenario where a call chain spans multiple modules using `call_indirect` (Module A -> Module B -> Module C), with each module contributing to stack operations. Verify the final results and ensure each transition maintains stack integrity and expected results.     - **Constraint:** Validate complex call chains and stack integrity across multiple module boundaries.     - **Context:** Ensures multi-module call chains using `call_indirect` maintain stack integrity and correct results.

(assert_invalid
 (module
   (import "a" "table" (table 10 funcref))
   (import "a" "type1" (type (func (param i32) (result i32))))
   (import "b" "type2" (type (func (param i32) (result i32))))
   (import "c" "func1" (func (param i32) (result i32)))
   (import "c" "func2" (func (param i32) (result i32)))

   (func (export "main") (param i32) (result i32)
     (call_indirect (type 0) (local.get 0))
     (call_indirect (type 1) (i32.const 1))
     (call (type 2) (i32.add (i32.const 2) (local.get 0)))
   )
 )
 "type mismatch"
)